affine/affine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: affine
  name: affine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: affine
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: affine
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: env
          image: ghcr.io/toeverything/affine:stable
          name: affine-server
          ports:
            - containerPort: 3010
              protocol: TCP
          volumeMounts:
            - mountPath: /root/.affine/storage
              name: affine-claim0
            - mountPath: /root/.affine/config
              name: affine-claim1
      restartPolicy: Always
      volumes:
        - name: affine-claim0
          persistentVolumeClaim:
            claimName: affine-claim0
        - name: affine-claim1
          persistentVolumeClaim:
            claimName: affine-claim1
