affine/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: affine
            - name: POSTGRES_HOST_AUTH_METHOD
              value: trust
            - name: POSTGRES_INITDB_ARGS
              value: --data-checksums
            - name: POSTGRES_PASSWORD
            - name: POSTGRES_USER
              value: affine
          image: pgvector/pgvector:pg16
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - affine
                - -d
                - affine
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: affine-postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-claim0
      restartPolicy: Always
      volumes:
        - name: postgres-claim0
          persistentVolumeClaim:
            claimName: postgres-claim0
