affine/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: redis
          livenessProbe:
            exec:
              command:
                - redis-cli
                - --raw
                - incr
                - ping
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: affine-redis
      restartPolicy: Always
