affine/affine-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: affine
  name: affine
spec:
  ports:
    - port: 3010
      targetPort: 3010
  selector:
    app: affine
