affine/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: redis
  name: redis
  namespace: default
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    io.kompose.service: redis
  type: ClusterIP
